[fix]: done fixing the backend apis
